css refactor, added responsive breakpoints, margins for top and bootom of container to stop nav and footers overlapping the content, general housekeeping, git ignore in the stream 2 final as it has its own heroku repo

--- a/Stream 2/Back End Development/Final Project/static/css/custom.css
+++ b/Stream 2/Back End Development/Final Project/static/css/custom.css
@@ -1,5 +1,6 @@
 .body {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -18,6 +19,8 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    padding-top: 60px;
+    padding-bottom: 35px;
 }
 
 #loading-screen {
@@ -81,7 +84,7 @@
 }
 
 .table-wrapper,
-.table wrapper > th {
+.table-wrapper > th {
     width: 100%;
     max-height: 300px;
     overflow: auto;
